--- a/assets/css/shpetinas.css
+++ b/assets/css/shpetinas.css
@@ -154,7 +154,7 @@ a{ color:inherit; text-decoration:none; }
   font-size:15px;
 }
 
-/* ================= COMMITTEE ================= */
+
 .committee .grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
@@ -164,7 +164,7 @@ a{ color:inherit; text-decoration:none; }
   border:1px solid var(--rule);
   border-radius:16px;
   overflow:hidden;
-  background:#ff1493;
+  background:#FFB6C1;
   transition:transform .18s ease, box-shadow .18s ease;
   box-shadow:0 2px 10px rgba(0,0,0,.03);
 }
